# seq2func

./: .env.example  .gitignore  Dockerfile  README.md  db.py  fetch_protein_gene_info.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  server.py  test_query.ipynb  test_tools.ipynb  test_tools.py
.github/workflows/: deploy.yml
api/: database.py  main.py  models.py
api/routes/: genes.py  proteins.py  stats.py
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/components/: GeneInfoCard.tsx  PaperResults.tsx  ProgressDisplay.tsx  ProteinGrid.tsx  ProteinLink.tsx  ProteinList.tsx  ProteinTable.tsx  ScrollRestoration.tsx  SearchBar.tsx  ThemeProvider.tsx  ThemeToggle.tsx  ViewModeScript.tsx  ViewToggle.tsx
app/data/: proteins.ts
app/gene/[symbol]/: page.tsx
app/lib/: api.ts  config.ts
app/protein/[id]/: page.tsx
app/test-api/: page.tsx
config/: config_database.yaml  config_proteins.yaml
notebooks/: fetch_longevity_genes_details.ipynb  gen_age.ipynb  s2f_poc_v3.ipynb  tes.ipynb
src/: config.py
src/database/: load_data.py  schema.sql
src/tasks/: __init__.py  task_manager.py
src/tools/: pubmed.py  pubmed_fetch.py  pubmed_search.py  screening.py
src/workflows/: __init__.py  gene_search.py
utils/: database_operations.py  fetch_and_store.py  fetch_data.py  gene_master.py  gene_transcript_protein.py  protein_master.py  psi_mod_mapping.py
