[project]
name = "seq2func"
version = "0.1.0"
description = "Agentic AI framework for extracting protein/gene sequence-to-function relationships relevant to longevity and aging research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "biopython>=1.85",
    "fastapi>=0.104.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "llama-index>=0.14.4",
    "openai>=1.109.1",
    "pandas>=2.2.3",
    "pydantic>=2.5.0",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "playwright>=1.55.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scispacy>=0.6.2",
    "spacy>=3.8.7",
    "uvicorn[standard]>=0.24.0",
]
